[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/minigames/CoconutMinigame.gd" type="Script" id=1]
[ext_resource path="res://audio/sfx/coconut-row-start.wav" type="AudioStream" id=2]
[ext_resource path="res://audio/sfx/minigame-success.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
antialiased = false
font_path = "res://fonts/mini-wakuwaku-maru.otf"

[sub_resource type="DynamicFont" id=2]
size = 80
outline_color = Color( 0.588235, 0.352941, 0.243137, 1 )
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="RectangleShape2D" id=5]

[node name="CoconutMinigame" type="Node2D"]
z_index = 4
script = ExtResource( 1 )

[node name="IntroText" type="RichTextLabel" parent="."]
editor/display_folded = true
margin_left = -199.809
margin_top = -134.238
margin_right = 312.191
margin_bottom = 142.762
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.0627451, 0.537255, 1, 1 )
bbcode_enabled = true
bbcode_text = "  Dodge
   the
Coconuts!"
text = "  Dodge
   the
Coconuts!"

[node name="InitialDisplayTimer" type="Timer" parent="IntroText"]
wait_time = 0.8
one_shot = true
autostart = true

[node name="DisappearTimer" type="Timer" parent="IntroText"]
wait_time = 2.0
one_shot = true

[node name="SuccessText" type="RichTextLabel" parent="."]
margin_left = -165.202
margin_top = -36.4358
margin_right = 346.798
margin_bottom = 240.564
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.0980392, 0.588235, 0.0980392, 1 )
bbcode_enabled = true
bbcode_text = "Success!"
text = "Success!"

[node name="FailureText" type="RichTextLabel" parent="."]
margin_left = -144.238
margin_top = -49.6178
margin_right = 191.762
margin_bottom = 63.3822
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.972549, 0.352941, 0.352941, 1 )
bbcode_enabled = true
bbcode_text = "Failure"
text = "Failure"

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 6
collision_mask = 6

[node name="BottomCollision" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 3 )

[node name="LeftCollision" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 4 )

[node name="RightCollision" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 5 )

[node name="RoundTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="ExitDelayTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RowStartSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -30.0
pitch_scale = 0.75

[node name="MinigameSuccessSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
